2008-07-13  Sam Steingold  <sds@gnu.org>

	* defs1.lisp (*load-logical-pathname-translations-database*):
	since SEARCH-FILE now handles both files and directories
	similarly, only one element is needed
	(load-logical-pathname-translations): updated for the search-file
	changes: when the search finds a directory, it is returned as is
	instead of its contents
	* init.lisp (search-file): EXTENSIONS is optional, also accept KEEP-DIRS
	(load): pass KEEP-DIRS=NIL to search-file

2008-07-13  Sam Steingold  <sds@gnu.org>

	* pathname.d (error_file_stream_unnamed, error_dir_not_exists)
	(error_noname, error_notdir): print caller
	(FILE-NAMESTRING, DIRECTORY-NAMESTRING, ABSOLUTE-PATHNAME)
	(physical_namestring): simplify code

2008-07-12  Sam Steingold  <sds@gnu.org>

	* pathname.d (classify_namestring): extracted from check_sub_directory
	(check_sub_directory): remove
	(directory_search_1subdir): use classify_namestring instead
	(PROBE-PATHNAME): also return the physical pathname as the 2nd value
	* init.lisp (ppn-fwd): use the second value of PROBE-PATHNAME
	* win32.d (MAXPATHLEN): define (needed for classify_namestring)

2008-07-12  Sam Steingold  <sds@gnu.org>

	* spvw_debug.d (ThePackage_, ThePathname_) [DEBUG_SPVW]: add

2008-07-11  Sam Steingold  <sds@gnu.org>

	new function PROBE-PATHNAME
	* pathname.d (probe_path_from_stream): extracted from PROBE-FILE
	(PROBE-FILE): use it
	(PROBE-PATHNAME): implemented
	* constsym.d, subr.d (probe_pathname): declare
	* init.lisp (probe-pathname): export
	(search-file): use it instead of probe-file

2008-07-11  Sam Steingold  <sds@gnu.org>

	* pathname.d (error_directory): extracted from the unix version of
	assure_dir_exists
	(assure_dir_exists) [WIN32_NATIVE]: use it instead of
	OS_file_error for consistency with unix
	(struct file_status) [WIN32_NATIVE]: new slot fs_fileattr
	(file_status_is_dir): new function
	(get_path_info) [PATHNAME_UNIX]: extracted from assure_dir_exists
	(assure_dir_exists) [PATHNAME_UNIX]: use it